--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,60 @@
+/* @font-face {
+    font-family: 'open_sansregular';
+    src: url('fuentes/OpenSans-Regular-webfont.eot');
+    src: url('fuentes/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fuentes/OpenSans-Regular-webfont.woff') format('woff'),
+         url('fuentes/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('fuentes/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+} */
+
+@font-face {
+	font-family: 'icomoon';
+	src:url('fuentes/icomoon.eot?-8yvav6');
+	src:url('fuentes/icomoon.eot?#iefix-8yvav6') format('embedded-opentype'),
+		url('fuentes/icomoon.woff?-8yvav6') format('woff'),
+		url('fuentes/icomoon.ttf?-8yvav6') format('truetype'),
+		url('fuentes/icomoon.svg?-8yvav6#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-lapiz:before {
+	content: "\e908";
+	margin-right: 0.5em;
+}
+.icon-estrella:before {
+	content: "\e9d9";
+	color: #FFDA00;
+	margin-right: 0.3em;
+	position: relative;
+	top: 0.1em;
+}
+.icon-f-arriba:before {
+	content: "\ea41";
+	color: #00ff00;
+}
+.icon-f-abajo:before {
+	content: "\ea43";
+	color: #ff0000;
+}
+
 a
 {
 	color: #22BCE0;
@@ -5,7 +62,7 @@ a
 body
 {
 	background: #EEEEEE;
-	font-family: Arial;
+	font-family: Lato;
 	font-size: 16px;
 }
 footer
@@ -36,7 +93,7 @@ header
 	background: #344B54;
 	color: white;
 	overflow: hidden;
-	padding: 0.5em;
+	padding: 1.5em;
 	position: relative;
 }
 header figure
@@ -61,17 +118,30 @@ header #avatar img
 	border-radius: 50%;
 	width: 80px;
 }
+header #logo
+{
+	/*-webkit-transform:rotate(90deg);*/
+	/*-moz-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);*/	
+	border-right: 1px solid white;
+	margin-right: 0.5em;
+}
 header #logo img
 {
-	border-right: 1px solid white;
-	padding-right: 0.5em;
 	margin-right: 0.5em;
+	padding-right: 0.5em;
 	width: 52px;
+	-webkit-transition: 0.5s;
+}
+header #logo img:hover{
+	-webkit-transform:rotate(360deg);
 }
 nav
 {
-	background: #80BCA3;
+	background: #197578;
 	position: relative;
+	padding: 0 6em 0 0;
 }
 nav ul
 {
@@ -90,6 +160,7 @@ nav ul li a
 	display: block;
 	padding: 0.5em;
 	text-decoration: none;
+	-webkit-transition: 0.3s;
 }
 nav ul #publicar_nav
 {
@@ -103,8 +174,25 @@ nav ul #publicar_nav a
 	border-radius: 5px;
 	box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
 	font-style: italic;
-	padding: 0.6em 0.8em;
+	padding: 0.8em 0.5em 0.8em 2.5em;
 	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+}
+nav ul #publicar_nav a:before
+{
+	position: absolute;
+	left: 0.5em;
+	top: 0.7em;	
+}
+nav ul #publicar_nav a:hover:before
+{
+	font-size: 20px;
+}
+nav ul li a:hover{
+	background: #22BCE0;
+}
+aside
+{
+	display: none;
 }
 #contenido
 {
@@ -171,8 +259,42 @@ nav ul #publicar_nav a
 	right: 3%;
 	top: 100%;
 }
+#contenido .item .votacion a
+{
+	text-decoration: none;
+}
 #contenido .item .votacion .comentarios_item,
 #contenido .item .votacion .guardar_item
 {
 	float: right;
+}
+
+/*@media print{
+	body{
+		font-size: 20px;
+		color: red;
+	}
+}*/
+@media screen and (min-width: 800px){	
+	#contenido{
+		overflow: hidden;
+	}
+	#contenido .item{
+		width: 48%;
+		float: left;
+	}
+	#contenido .item:nth-child(odd){
+		margin-right: 2%;
+	}
+}
+@media screen and (min-width: 1000px){
+	aside{
+		display: block;
+		float: right;
+		margin: 1em;
+		width: 20%;
+	}
+	aside video{
+		width: 100%;
+	}
 }
