--- a/estilos.css
+++ b/estilos.css
@@ -299,3 +299,25 @@ aside
 		width: 100%;
 	}
 }
+
+/*Formulario*/
+.formulario
+{
+	padding: 1em;
+	text-align: right;
+	display: none;
+}
+.formulario input
+{
+	border: 1px solid #CCC;
+	border-radius: 5px;
+	padding: 0.2em 0.6em;
+}
+.formulario input[type="submit"]
+{
+	background: #22BCE0;
+	font-style: italic;
+	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+	color: white;
+
+} 
