--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,7 @@
     font-style: normal;
 
 } */
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
 @font-face {
 	font-family: 'icomoon';
